Revert "fix flash spacing"

--- a/app/javascript/stylesheets/modules/_signup.scss
+++ b/app/javascript/stylesheets/modules/_signup.scss
@@ -4,19 +4,12 @@
     text-decoration: none;
 }
 
-body.sessions {
-    padding: 0;
-}
-
 .signup-wrapper {
     height: 100vh;
     width: 100vw;
     display: flex;
-    position: relative;
     flex-direction: column;
-    padding-bottom: 20px;
     background-color: #556b2f;
-    box-sizing: border-box;
 }
 
 .signup-header {
@@ -182,7 +175,8 @@ h1 {
 
 .signup-footer {
     width: 100%;
-    line-height: 20px;
+    height: 20px;
+    margin-bottom: 8px;
     position: absolute;
     bottom: 0;
     text-align: center;
